# notes

./: README.md  pyproject.toml
src/notes/: server.py
