[project]
name = "notes"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.1.1",]
[[project.authors]]
name = "LoloaBe"
email = "luca@lucacriscuolo.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
notes = "notes:main"
